Camera landscape and Homepage images

--- a/wahue/app/src/main/AndroidManifest.xml
+++ b/wahue/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:theme="@style/Theme.Tone" />
         <activity
             android:name=".CameraActivity"
+            android:screenOrientation="landscape"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
