--- a/wahue/app/src/main/AndroidManifest.xml
+++ b/wahue/app/src/main/AndroidManifest.xml
@@ -20,15 +20,18 @@
         tools:targetApi="31">
         <activity
             android:name=".SigninActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:label="@string/title_activity_signin"
             android:theme="@style/Theme.Tone" />
         <activity
             android:name=".HomepageActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:theme="@style/Theme.Tone" />
         <activity
             android:name=".LoginActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.Tone" />
@@ -38,6 +41,7 @@
             android:exported="false" />
         <activity
             android:name=".LogoActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Tone">
