--- a/wahue/app/src/main/AndroidManifest.xml
+++ b/wahue/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
             android:theme="@style/Theme.Tone" />
         <activity
             android:name=".CameraActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".LogoActivity"
